# PhysicsPaper

./: .cursorrules  .flake8  .gitignore  .zenodo.json  ADCD_CLEAN_PLAN.md  ADCD_EXPERIMENT_PLAN.md  ADCD_MASTER_PLAN.md  ADCD_Mitigation_Plan_v2.md  ADCD_PHASE2_GENIUS_PLAN.md  ARXIV_ENDORSERS_AND_SUBMISSION.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PAPER_POSITIONING_STRATEGY.md  README.md  ablation_results.json  adcd_extended_grammar_plan.md  arxiv_bundle.tar  benchmark_optimizer.py  binary_pulsar_sensitivity.json  blind_benchmark_results.json  correction_scaling_results.json  efficiency_table.md  experiment_results.md  gate_telemetry.json  generate_extended_figures.py  generate_figures.py  misspecification_results.json  mkdocs.yml  mlp_baseline_results.json  multi_seed_summary.json  multivariable_benchmark_results.json  oracle_ablation_results.json  pyproject.toml  pysr_baseline_fair.json  pysr_baseline_generous.json  pysr_baseline_results.json  pysr_profiles.py  (+26 more)
.github/: PULL_REQUEST_TEMPLATE.md
docs/: GITHUB_RELEASE_v2.1.0.md  GITHUB_RELEASE_v2.1.2.md  GITHUB_RELEASE_v2.1.3.md  SUBMISSION_CHECKLIST_v2.1.2.md  SUBMISSION_CHECKLIST_v2.1.3.md  ZENODO_RELEASE_v2.1.0.md  ZENODO_RELEASE_v2.1.3.md  ZENODO_RELEASE_v2.2.0.md  changelog.md  index.md  paper.md
paper/: arxiv_metadata.txt  main.blg  main.tex
results/: bic_bootstrap_delta.json  bic_eff_analysis.json  cosmic_chronometers.json  experiment_suite.json  growth_rate_discovery.json  growth_rate_subsets.json  mond_cv_2param.json  muon_g2_validation.json  sparc_discovery.json  sparc_robustness_results.json
scratch/: audit_claims.py  debug_anharmonic.py  debug_arc.py  debug_features.py  debug_gas_law.py  debug_jax_opt.py  format_tables.py
scripts/: aggregate_seeds.py  generate_adcd_animation.py  generate_efficiency_table.py  generate_experiment_report.py  generate_pysr_fair_tables.py  generate_real_world_tables.py  generate_seed_distribution.py  generate_sparc_tables.py  ras_fase0_diagnostic.py  regenerate_plot.py  test_19th_century_physics_anomaly.py  validate_results.py  verify_mv_scenarios.py  verify_paper_claims.py  wb_feasibility.py  wb_lit_comparison.py
src/: anomaly_scenarios.py  coarse_evaluator.py  correction_orchestrator.py  dimensional_checker.py  feynman_dataset.py  jax_optimizer.py  llm_proposer.py  metrics.py  orchestrator.py  pipeline.py  real_data_loader.py  real_scenarios.py
tests/: test_aggregate_seeds.py  test_api.py  (+29 more)
(+81 files in other folders)
