[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adcd"
version = "1.1.0"
description = "Anomaly-Driven Correction Discovery: Physics-Constrained Symbolic Regression for Evolutionary Scientific Discovery"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Muhammad Afif Erdita", email = "maeapip10@gmail.com" }
]
keywords = ["symbolic regression", "physics", "machine learning", "scientific discovery", "JAX"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "sympy>=1.12",
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "flake8>=6.1",
    "black>=23.0",
]
llm = [
    "google-generativeai>=0.3",
]
all = ["adcd[dev,llm]"]

[project.urls]
Homepage = "https://zenodo.org/records/20534940"
Repository = "https://github.com/apiprdt/PhysicsPaper"
"Bug Tracker" = "https://github.com/apiprdt/PhysicsPaper/issues"
DOI = "https://doi.org/10.5281/zenodo.20534940"

[project.scripts]
adcd-discover = "adcd.correction_orchestrator:main_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -q"
filterwarnings = [
    # matplotlib emits DeprecationWarning when plt.show() is called on a
    # non-interactive (Agg) backend. This is a third-party warning not under
    # our control; we already guard plt.show() with plt.isinteractive().
    "ignore:FigureCanvasAgg is non-interactive:DeprecationWarning",
]

[tool.coverage.run]
source = ["adcd"]
omit = ["tests/*", "scratch/*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "scratch", "*.egg-info"]
